# BITS_PS1

./: Demo link.txt  README.md  app.py  requirements.txt
KnowYourAudience-Quiz/: .env  app.py  test.py
KnowYourAudience-Supabase-Analysis/: app.py  requirements.txt  supabase-table.py
NirvanBhagabati/1-Week1CommonTask/: README.md  requirements.txt
NirvanBhagabati/2-HybridRetrieverChatbot/: HybridRetrieverChatbot.py  README.md  requirements.txt
NirvanBhagabati/3-AgenticTravelPlanner/: README.md  requirements.txt  travel_plan.py
NirvanBhagabati/4-TravelPlannerWithPLM/: PLM.py  README.md  requirements.txt
NirvanBhagabati/5-PLMWorkflow/: README.md
NirvanBhagabati/VivaLessons/: VivaLessons.md
Prakhar/: README.md  main.py  mergeTbs.py  requirements.txt
PrakharAndSagar_GenAiOps/: README.md  main.py  prakharVivaReview.md  requirements.txt
PrakharAndSagar_GenAiOps/CrewAI_Instagram_Post_Automation/: README.md  agents.py
PrakharAndSagar_GenAiOps/crewAiInstaPost/: README.md  pyproject.toml
PrakharAndSagar_GenAiOps/crewAiInstaPost/tools/: search_tools.py
PrakharAndSagar_GenAiOps/xpia/: .env.example  .gitignore  .python-version  README.md  http_xpia.py  log.txt  main.py  requirements.txt  sensitive_data.txt  supabase_client.py
Team-5-Chatbot/: app.py
Team-5-Quiz_and_Chatbot/: .env  README.md  app.py  chatbot.py  combined_streamlit.py  database.py  quiz.py  utils.py
Team_6/: README.md  chatbot_TEAM_6.ipynb
Team_MemManage/Final_Project/: app.py  mem_file.py  requirements.txt
worthyourbuck/: app.py  final_code.ipynb  main.py  requirements.txt
(+11 files in other folders)
